fix: swagger auto-gen correção
