# swagger_output.json
@@ -7,17 +7,21 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000/api"
+      "url": "http://localhost:3000/"
     }
   ],
   "tags": [
     {
       "name": "Produto",
       "description": "Endpoints"
+    },
+    {
+      "name": "Usuario",
+      "description": "Endpoints"
     }
   ],
   "paths": {
-    "/produtos/create": {
+    "/api/produtos/create": {
       "post": {
         "tags": [
           "Produto"
@@ -34,7 +38,7 @@
             "description": "Dados inválidos"
           },
           "500": {
-            "description": "Dados inválidos"
+            "description": "Erro interno"
           }
         },
         "requestBody": {
@@ -46,13 +50,14 @@
               },
               "examples": {
                 "default": {
+                  "summary": "Exemplo de produto",
                   "value": {
                     "name": "PlayStation 5",
                     "price": 4500,
                     "description": "Console de última geração",
                     "category": "eletrônicos",
                     "product_stock": 50,
-                    "product_code": "PS5-${Date.now()}"
+                    "product_code": "PS5-9095"
                   }
                 }
               }
@@ -61,9 +66,12 @@
         }
       }
     },
-    "produtos/{product_code}": {
+    "/api/produtos/delete/{product_code}": {
       "delete": {
-        "description": "",
+        "tags": [
+          "Produto"
+        ],
+        "description": "Deleta um produto pelo código",
         "parameters": [
           {
             "name": "product_code",
@@ -71,9 +79,66 @@
             "required": true,
             "schema": {
               "type": "string"
-            }
+            },
+            "description": "Código único do produto",
+            "example": "PS5-1234"
           }
         ],
+        "responses": {
+          "200": {
+            "description": "Produto deletado com sucesso"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Produto não encontrado"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      }
+    },
+    "/usuarios/register": {
+      "post": {
+        "description": "",
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "example": "any"
+                  },
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/usuarios/login": {
+      "post": {
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -81,11 +146,31 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -103,7 +188,7 @@
           "properties": {
             "type": "object",
             "properties": {
-              "nome": {
+              "name": {
                 "type": "object",
                 "properties": {
                   "type": {
@@ -112,12 +197,48 @@
                   }
                 }
               },
-              "preco": {
+              "price": {
                 "type": "object",
                 "properties": {
                   "type": {
                     "type": "string",
                     "example": "number"
+                  }
+                }
+              },
+              "description": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  }
+                }
+              },
+              "category": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
+                  }
+                }
+              },
+              "product_stock": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "number"
+                  }
+                }
+              },
+              "product_code": {
+                "type": "object",
+                "properties": {
+                  "type": {
+                    "type": "string",
+                    "example": "string"
                   }
                 }
               }
